# prefix-sums

./: .gitignore  LICENSE  README.md  flake.nix  random-stuff.cabal
app/: Main.hs
asm/: PostfixSums.s
src/: Implementations.hs
